# agent-runtime

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  agent-runtime.toml  agent-runtime.yaml  clippy.toml  package-lock.json  package.json  rust-toolchain.toml  workflow_results.mmd  workflow_structure.mmd
.github/skills/commit-changes/: SKILL.md  SPECIFICATION.md
.github/workflows/: ci.yml  release.yml
benches/: agent_benchmarks.rs
crates/agent-discourse/: Cargo.toml  discourse.yaml
crates/agent-discourse/actors/: mira.yaml
crates/agent-discourse/agents/: 01_dr_chen.yaml  02_maya.yaml  03_alex.yaml
crates/agent-discourse/src/: actor.rs  lib.rs
docs/: ADVANCED_CONTEXT_STRATEGIES.md  CHAT_HISTORY.md  CONFIGURATION.md  CROSS_PLATFORM_PERFORMANCE.md  EMBEDDING_OPTIONS.md  EVENT_BROADCASTING.md  EVENT_STREAMING.md  IMPLEMENTATION.md  LLAMA_PROVIDER.md  LLM_MODULE.md  MCP_INTEGRATION.md  MERMAID_EXPORT.md  MERMAID_IMPLEMENTATION.md  MIGRATION_0.2_TO_0.3.md  PERFORMANCE.md  STEP_ABSTRACTION.md  STREAMING.md  SUBWORKFLOW_AND_CHECKPOINTING.md  TESTING.md  TOOL_CALLING.md  TOOL_LOOP_PREVENTION.md  TOOL_SCALING_ANALYSIS.md  UI_INTEGRATION.md  WORKFLOW_CHAT_HISTORY.md  WORKFLOW_COMPOSITION.md  WORKFLOW_DEMO.md  spec.md
docs/vnext/: ASYNC_EVENTS.md
scripts/: Get-Version.ps1
src/: agent.rs  agent_test.rs  config.rs  context.rs  context_strategies.rs  error.rs  event.rs  event_test.rs  lib.rs  logging.rs  retry.rs  runtime.rs  step.rs  step_impls.rs  step_impls_test.rs  timeout.rs  tool.rs  tool_loop_detection.rs  types.rs  types_test.rs  workflow.rs  workflow_test.rs
src/agent/: mod.rs  tests.rs
src/context/: mod.rs
src/context/strategies/: message_type.rs  mod.rs  sliding_window.rs  summarization.rs  token_budget.rs
src/event/: mod.rs  tests.rs
src/llm/: mock.rs  mod.rs  types.rs  types_test.rs
src/llm/provider/: llama.rs  mod.rs  openai.rs
src/runtime/: executor.rs  mod.rs  retry.rs
src/tools/: builtin.rs  mcp.rs  mcp_client.rs  mod.rs  native.rs  registry.rs
src/workflow/: mod.rs  step.rs  tests.rs
src/workflow/steps/: agent.rs  conditional.rs  mod.rs  subworkflow.rs  transform.rs
tests/: chat_history_tests.rs  checkpoint_tests.rs  error_tests.rs  integration_tests.rs  load_tests.rs  subworkflow_context_tests.rs  workflow_context_tests.rs
