[workspace]
resolver = "2"
members = [
    "crates/agent-discourse",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Travis Sharp <travis@kuipersys.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsharp/agent-runtime"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

# Root package - the main MCP library
[package]
name = "agent-runtime"
version = "0.3.0"
edition = "2021"
authors = ["Travis Sharp <travis@kuipersys.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust implementation of the Model Context Protocol (MCP) for AI tool integration"
repository = "https://github.com/tsharp/agent-runtime"
keywords = ["agent", "ai", "llm", "tools", "protocol"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

[features]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
inventory = "0.3"
dashmap = "6.1.0"
parking_lot = "0.12.5"
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.0"
md5 = "0.7"
papaya = "0.2.4"

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# MCP - Model Context Protocol
rust-mcp-sdk = { version = "0.9", features = ["client"] }

# Optional - HTTP transport (client)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Optional - HTTP server (for examples)
actix-web = { version = "4"}

[[bin]]
name = "advanced_workflow_demo"
path = "src/bin/advanced_workflow_demo.rs"

[[bin]]
name = "advanced_strategies_demo"
path = "src/bin/advanced_strategies_demo.rs"

[[bin]]
name = "chat_history_demo"
path = "src/bin/chat_history_demo.rs"

[[bin]]
name = "hello_workflow"
path = "src/bin/hello_workflow.rs"

[[bin]]
name = "multi_subscriber"
path = "src/bin/multi_subscriber.rs"

[[bin]]
name = "step_types_demo"
path = "src/bin/step_types_demo.rs"

[[bin]]
name = "nested_workflow"
path = "src/bin/nested_workflow.rs"

[[bin]]
name = "mermaid_viz"
path = "src/bin/mermaid_viz.rs"

[[bin]]
name = "complex_viz"
path = "src/bin/complex_viz.rs"

[[bin]]
name = "workflow_demo"
path = "src/bin/workflow_demo.rs"

[[bin]]
name = "llm_demo"
path = "src/bin/llm_demo.rs"

[[bin]]
name = "llama_demo"
path = "src/bin/llama_demo.rs"

[[bin]]
name = "two_agent_chain_demo"
path = "src/bin/two_agent_chain_demo.rs"

[[bin]]
name = "multi_user_message_demo"
path = "src/bin/multi_user_message_demo.rs"

[[bin]]
name = "multi_agent_discourse_demo"
path = "src/bin/multi_agent_discourse_demo.rs"

[[bin]]
name = "scene_actor_demo"
path = "src/bin/scene_actor_demo.rs"

[[bin]]
name = "agent_context_demo"
path = "src/bin/agent_context_demo.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "agent_benchmarks"
harness = false
tokio-test = "0.4"
tempfile = "3.8"
actix-web = "4"

[lib]
name = "agent_runtime"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]