[workspace]
resolver = "2"
members = [
"crates/agent-discourse",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Travis Sharp <travis@kuipersys.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsharp/agent-runtime"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

# Root package - the main MCP library

[package]
name = "agent-runtime"
version = "0.4.0"
edition = "2021"
authors = ["Travis Sharp <travis@kuipersys.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust implementation of the Model Context Protocol (MCP) for AI tool integration"
repository = "https://github.com/tsharp/agent-runtime"
keywords = ["agent", "ai", "llm", "tools", "protocol"]
categories = ["development-tools", "network-programming"]
readme = "README.md"
autotests = false

[features]
default = []
# Enables the workflow runtime : `Workflow`, `WorkflowBuilder`, `Runtime`,
# `WorkflowContext`, `ContextManager` strategies, and all built-in `Step`
# implementations(`AgentStep`, `TransformStep`, `ConditionalStep`,
# `SubWorkflowStep`). Off by default — enable when you want to compose
# agents into multi-step pipelines.
workflow = []

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
inventory = "0.3"
dashmap = "6.1.0"
parking_lot = "0.12.5"
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.0"
md5 = "0.7"
papaya = "0.2.4"

# Configuration
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# MCP - Model Context Protocol
rust-mcp-sdk = { version = "0.9", features = ["client"] }

# Optional - HTTP transport(client)
reqwest = { version = "0.11", features = ["json", "stream"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "agent_benchmarks"
harness = false

# --- Integration tests --------------------------------------------------
# Tests that exercise only Agent/LLM/Tools/Events build in the default
# feature set.

[[test]]
name = "chat_history_tests"
path = "tests/chat_history_tests.rs"

[[test]]
name = "error_tests"
path = "tests/error_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Tests below construct `Workflow`/`Runtime` directly and therefore only
# compile when the `workflow` feature is enabled.

[[test]]
name = "checkpoint_tests"
path = "tests/checkpoint_tests.rs"
required-features = ["workflow"]

[[test]]
name = "load_tests"
path = "tests/load_tests.rs"
required-features = ["workflow"]

[[test]]
name = "subworkflow_context_tests"
path = "tests/subworkflow_context_tests.rs"
required-features = ["workflow"]

[[test]]
name = "workflow_context_tests"
path = "tests/workflow_context_tests.rs"
required-features = ["workflow"]

[lib]
name = "agent_runtime"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
