[package]
name = "agent-discourse"
version = "0.4.0"
edition = "2021"
authors = ["Travis Sharp <travis@kuipersys.com>"]
license = "MIT OR Apache-2.0"
publish = false
description = "Multi-agent discourse demo: thinking agents with conditional responses"

[dependencies]
agent-runtime = { path = "../.." }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde  = "0.10.4"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"
